--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 		<h2> My Experience </h2>
 		<p> I have 5 years of experience.</p>
 
-		<span> something </span>
-		<span> goes here...</span>
+		<span> something goes here.. </span>
 
 		<img src="https://upload.wikimedia.org/wikipedia/commons/3/30/Googlelogo.png" width="100"/>
 
