--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  <meta charset="utf-8">
+	  <meta charset="utf-8" />
 	  <title>Home page</title>
+
+	  <link type "text/css" rel="stlesheet" href="style.css"/>
+	  
 	</head>
 	<body>
-		<h1>Daryl</h1>
+
+		<div id="header">
+		<h1> Daryl </h1>
+
+		<div id="box">Box</div>
+
 		<h2>Senior Designer at Manning Gottlieb OMD</h2>
 
-		<p>I live in Bow, London and I cycle to work.</p> 
+		<div id="box"><p> I live in Bow, London and I cycle to work.</p> </div> 
 
 		<h2> My Experience </h2>
-		<p> I have 5 years of experience.</p>
+		<p class="original"> I have 5 years of experience.</p>
 
-		<span> something </span>
-		<span> goes here...</span>
-
+		<span> something goes here...</span>
+		
 		<img src="https://upload.wikimedia.org/wikipedia/commons/3/30/Googlelogo.png" width="100"/>
 
 		<a href="http://google.com">Homepage</a>
-
 	</body>
 </html>
