--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	  <meta charset="utf-8" />
 	  <title>Home page</title>
 
-	  <link type "text/css" rel="stlesheet" href="style.css"/>
+	  <link type="text/css" rel="stylesheet" href="style.css"/>
 	  
 	</head>
 	<body>
