--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<div id="box">Box</div>
 
 		<h2>Senior Designer at Manning Gottlieb OMD</h2>
+		<h2>I'm 29 years old, my birthday is July 5th</h2>
 
 		<div id="box"><p> I live in Bow, London and I cycle to work.</p> </div> 
 
